--- a/package.json
+++ b/package.json
@@ -14,14 +14,17 @@
     "@babel/preset-env": "^7.11.0",
     "babel-preset-react": "^6.24.1",
     "express": "^4.17.1",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1"
+    "react": "^16.13.1"
   },
   "devDependencies": {
     "@babel/core": "^7.11.1",
     "@babel/preset-react": "^7.10.4",
+    "@babel/preset-typescript": "^7.10.4",
+    "@types/react": "^16.9.44",
+    "@types/react-dom": "^16.9.8",
     "babel-loader": "^8.1.0",
     "html-webpack-plugin": "^4.3.0",
+    "typescript": "^3.9.7",
     "webpack": "^4.44.1",
     "webpack-cli": "^3.3.12"
   }
