--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "index.js",
   "scripts": {
     "build": "node ./node_modules/webpack/bin/webpack",
-    "serve": "node ./server/app.js"
+    "serve": "node ./server/app.js",
+    "lint": "eslint ./**/*.ts",
+    "lint-fix": "eslint ./**/*.ts --fix"
   },
   "keywords": [],
   "author": "",
@@ -27,6 +29,12 @@
     "@babel/preset-typescript": "^7.10.4",
     "@types/react": "^16.9.44",
     "@types/react-dom": "^16.9.8",
+    "@typescript-eslint/eslint-plugin": "^3.4.0",
+    "@typescript-eslint/parser": "^3.4.0",
+    "eslint": "^7.3.1",
+    "eslint-config-prettier": "^6.11.0",
+    "eslint-plugin-prettier": "^3.1.3",
+    "prettier": "2.0.5",
     "babel-loader": "^8.1.0",
     "css-loader": "^4.2.0",
     "file-loader": "^6.0.0",
