--- a/package.json
+++ b/package.json
@@ -13,8 +13,13 @@
   "dependencies": {
     "@babel/preset-env": "^7.11.0",
     "babel-preset-react": "^6.24.1",
+    "bcrypt": "^5.0.0",
+    "body-parser": "^1.19.0",
     "express": "^4.17.1",
-    "react": "^16.13.1"
+    "mysql": "^2.18.1",
+    "react": "^16.13.1",
+    "rebuild": "^0.1.2",
+    "serve": "^11.3.2"
   },
   "devDependencies": {
     "@babel/core": "^7.11.1",
